--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>Copyright &copy; Myntra.com | All rights reserved </p>
+        <p>Copyright &copy; Myntra.com | All rights reserved!! </p>
     </footer>
         
 </body>
